# ayu

./: AGENTS.md  LICENSE  Makefile  agent_feedback.md  pyproject.toml
.github/workflows/: publish_pypi.yml
docs/: apply-patch-tool.md  ayu_poem.md  cli.md  storage-backend.md  tui-chat-session-maintenance.md  tui-slash-command-maintenance.md
scripts/: check.py
src/ayu/: __init__.py  chat_runtime.py  cli.py  config.py  llm.py  server.py  session.py  system_prompt.py  tools.py  tui_app.py
src/ayu/storage/: __init__.py  factory.py  interfaces.py  memory_backend.py  models.py  sqlite_backend.py
src/ayu/tooling/: __init__.py  apply_patch_tool.py  feedback_tool.py  permission_actions.py  read_file_tool.py  run_shell_tool.py  write_file_tool.py
src/hi_ayu/: __init__.py  chat_runtime.py  cli.py  llm.py  server.py  shell_exec.py  system_prompt.py  tools.py  tui_app.py
src/hi_ayu/storage/: __init__.py  factory.py  interfaces.py  memory_backend.py  sqlite_backend.py
src/hi_ayu/tooling/: __init__.py  apply_patch_tool.py  common.py  read_file_tool.py  run_shell_tool.py  write_file_tool.py
tests/: test_apply_patch_tool.py  test_config.py  test_llm.py  test_storage_memory_backend.py  test_storage_sqlite_backend.py
