[project]
name = "ayu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "niu2x", email = "niu2x@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "textual>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
ayu = "ayu:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

