[project]
name = "ayu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "niu2x", email = "niu2x@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "textual>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "platformdirs>=4.3.0",
    "openai>=1.55.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
ayu = "ayu:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]



[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default=true
